# datascienceproject

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  medium.md  pyproject.toml  requirements.txt
.dvc/: config
config/: config.yaml
data/: processed.dvc  raw.dvc
research/: 5_model_evaluation.ipynb  research.ipynb
src/datascience/: __init__.py
src/datascience/components/: data_ingestion.py  data_validation.py  model_evaluation.py
src/datascience/config/: configuration.py
src/datascience/constants/: __init__.py
src/datascience/entity/: config_entity.py
src/datascience/pipeline/: data_transformation_pipeline.py  model_evaluation_pipeline.py  prediction_pipeline.py
src/datascience/utils/: common.py
