[project]
name = "data-science-full-custom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ensure>=1.0.4",
    "flask>=3.1.3",
    "flask-cors>=6.0.4",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "mlflow>=3.13.0",
    "notebook>=7.5.7",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "python-box>=7.4.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "tqdm>=4.68.1",
    "types-pyyaml>=6.0.12.20260518",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
